refactor: controller 응답 리팩토링