@@ -24,7 +24,6 @@ import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
 import org.springframework.web.cors.CorsConfiguration;
 
-import java.util.Collections;
 import java.util.List;
 
 
@@ -35,14 +34,12 @@ import java.util.List;
 public class SecurityConfig {
 
     private static final String[] PUBLIC_URLS = {
-            "/", "/favicon.ico",
-            "/member", "/member/save", "/member/login",
-            "/member/token/refresh", "/member/token/refresh/full",
-            "/member/logout", "/member/email-check"
+            "/api/join", "/api/join/email-check", "/api/auth/login",
+            "/api/auth/token/refresh", "/api/auth/token/refresh/full", "/api/auth/logout"
     };
 
     private static final String[] ADMIN_URLS = {
-            "/admin"
+            "/api/admin/**"
     };
 
     private final JWTUtil jwtUtil;
@@ -51,7 +48,6 @@ public class SecurityConfig {
     private final BlacklistService blacklistService;
     private final CustomUserDetailsService customUserDetailsService;
     private final JWTService jwtService;
-
 
     @Bean
     public AuthenticationManager authenticationManager(AuthenticationConfiguration config) throws Exception {
@@ -63,12 +59,11 @@ public class SecurityConfig {
         return new BCryptPasswordEncoder();
     }
 
-
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http, AuthenticationManager authManager) throws Exception {
 
         LoginFilter loginFilter = new LoginFilter(authManager, objectMapper, jwtService);
-        loginFilter.setFilterProcessesUrl("/member/login");
+        loginFilter.setFilterProcessesUrl("/api/auth/login");
 
         http
                 .csrf(AbstractHttpConfigurer::disable)
@@ -78,10 +73,10 @@ public class SecurityConfig {
                 .cors(cors -> cors.configurationSource(request -> {
                     CorsConfiguration config = new CorsConfiguration();
                     config.setAllowedOriginPatterns(List.of("*"));
-                    config.setAllowedMethods(Collections.singletonList("*"));
+                    config.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
                     config.setAllowCredentials(true);
-                    config.setAllowedHeaders(Collections.singletonList("*"));
-                    config.setExposedHeaders(Collections.singletonList("Authorization"));
+                    config.setAllowedHeaders(List.of("*"));
+                    config.setExposedHeaders(List.of("Authorization"));
                     config.setMaxAge(3600L);
                     return config;
                 }))
@@ -96,8 +91,7 @@ public class SecurityConfig {
 
                 .exceptionHandling(except -> except
                         .authenticationEntryPoint((request, response, authException) ->
-                                response.sendError(HttpServletResponse.SC_UNAUTHORIZED, "Unauthorized")
-                        ));
+                                response.sendError(HttpServletResponse.SC_UNAUTHORIZED, "Unauthorized")));
 
         http.addFilterAt(loginFilter, UsernamePasswordAuthenticationFilter.class);
         http.addFilterBefore(
@@ -108,3 +102,4 @@ public class SecurityConfig {
         return http.build();
     }
 }
+
